--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TastyBites</title>
 	<link rel="icon" type="/assets/img/png" href="/assets/img/Icon_logo.png"/>
+
 	
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,6 +63,16 @@
     <script src="/assets/js/main.js"></script>
     <script src="/assets/js/loadmore.js"></script>
 	<script src="/assets/js/shopping-cart-app.js"></script>
+	<script src="/assets/js/miniCart.js"></script>
+	
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
+  </script>
+  
 </body>
 
 </html>
