--- a/src/main/resources/templates/user/home/home.html
+++ b/src/main/resources/templates/user/home/home.html
@@ -9,7 +9,7 @@
 	                <div class="categories__slider owl-carousel">               	
 	                    <div class="col-lg-3" th:each="category : ${categories}">
 	                        <div class="categories__item set-bg w-100" th:data-setbg="@{|/assets/img/categories/${category.image}|}">
-	                            <h5><a href="#" th:text="${category.name}"></a></h5>
+	                            <h5><a th:href="@{|/product/list?cid=${category.id}|}" th:text="${category.name}"></a></h5>
 	                        </div>
 	                    </div>
 	                </div>
@@ -45,18 +45,14 @@
 		                        <div class="featured__item__pic set-bg" th:data-setbg="@{|/assets/img/product/${product.image}|}">
 		                            <ul class="featured__item__pic__hover">
 		                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-		                                <li><a th:href="@{|/product/detail/${product.id}|}"><i class="fa fa-retweet"></i></a></li>
+		                                <li><a th:href="@{|/product/detail/${product.id}|}"><i class="fa-solid fa-circle-info"></i></a></li>
 		                                <li><a th:attr="ng-click=@{|cart.add(${product.id})|}"><i class="fa fa-shopping-cart"></i></a></li>
 		                            </ul>
 		                        </div>
 		                        <div class="featured__item__text">
 		                            <h6><a href="#" th:text="${product.name}"></a></h6>
 		                            <div class="row" style="display: flex; justify-content: center;">
-									  <script>
-									    var price = parseFloat("[[*{product.price}]]");
-									    var formattedPrice = price.toLocaleString('VN');
-									    document.write('<h5>' + formattedPrice + '</h5>');
-									  </script>
+									  <h5 th:text="${#numbers.formatDecimal(product.price, 0, 'POINT', 0, 'POINT')}"></h5>
 									  &nbsp<span>đ</span>
 									</div>
 		                        </div>
