--- a/src/main/resources/templates/user/product/list.html
+++ b/src/main/resources/templates/user/product/list.html
@@ -190,21 +190,18 @@
 	                                            <div class="product__discount__percent">NEW</div>
 	                                            <ul class="product__item__pic__hover">
 	                                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-	                                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-	                                                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+	                                                <li><a th:href="@{|/product/detail/${product.id}|}"><i class="fa-solid fa-circle-info"></i></a></li>
+	                                        		<li><a th:attr="ng-click=@{|cart.add(${product.id})|}"><i class="fa fa-shopping-cart"></i></a></li>
 	                                            </ul>
 	                                        </div>
 	                                        <div class="product__discount__item__text">
 	                                            <span th:text="${product.category.name}"></span>
 	                                            <h5><a th:text="${product.name}"></a></h5>
 	                                           <div class="row" style="display: flex; justify-content: center;">
-												  <script>
-												    var price = parseFloat("[[*{product.price}]]");
-												    var formattedPrice = price.toLocaleString('VN');
-												    document.write('<h5>' + formattedPrice + '</h5>');
-												  </script>
-												  &nbsp<span style="text-decoration: underline;">đ</span>
+												    <h5 style="font-weight: 700" th:text="${#numbers.formatDecimal(product.price, 0, 'POINT', 0, 'POINT')}"></h5>
+												    &nbsp<span style="text-decoration: underline; color: #252525; font-weight: 700;">đ</span>
 												</div>
+
 	                                        </div>
 	                                    </div>
 	                                </div>
@@ -241,19 +238,15 @@
 	                                <div class="product__item__pic set-bg" th:data-setbg="@{|/assets/img/product/${p.image}|}">
 	                                    <ul class="product__item__pic__hover">
 	                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-	                                        <li><a th:href="@{|/product/detail/${p.id}|}"><i class="fa fa-retweet"></i></a></li>
+	                                        <li><a th:href="@{|/product/detail/${p.id}|}"><i class="fa-solid fa-circle-info"></i></a></li>
 	                                        <li><a th:attr="ng-click=@{|cart.add(${p.id})|}"><i class="fa fa-shopping-cart"></i></a></li>
 	                                    </ul>
 	                                </div>
 	                                <div class="product__item__text">
 	                                    <h6><a href="#" th:text="${p.name}"></a></h6>
 	                                    <div class="row" style="display: flex; justify-content: center;">
-										  <script>
-										    var price = parseFloat("[[*{p.price}]]");
-										    var formattedPrice = price.toLocaleString('VN');
-										    document.write('<h5>' + formattedPrice + '</h5>');
-										  </script>
-										  &nbsp<span style="text-decoration: underline;">đ</span>
+										  <h5 th:text="${#numbers.formatDecimal(p.price, 0, 'POINT', 0, 'POINT')}"></h5>
+										  &nbsp<span style="text-decoration: underline; color: #252525; font-weight: 700;">đ</span>
 										</div>                          
 	                                </div>
 	                            </div>
