--- a/src/main/resources/templates/user/cart/view.html
+++ b/src/main/resources/templates/user/cart/view.html
@@ -104,19 +104,19 @@
 	            </div>
 	            <!-- Modal -->
 				<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-				  <div class="modal-dialog">
+				  <div class="modal-dialog" style="max-width: 900px;">
 				    <div class="modal-content">
 				      <div class="modal-header">
-				        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-				        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				        <h5 class="modal-title" id="exampleModalLabel">Billing Details</h5>
+				        <span data-bs-dismiss="modal" aria-label="Close" style="cursor: pointer;"><i class="fas fa-times"></i></span>
 				      </div>
 				      <div class="modal-body">
-				        ...
+				        <div th:insert="/user/order/checkout.html"></div>
 				      </div>
-				      <div class="modal-footer">
+				      <!-- <div class="modal-footer">
 				        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 				        <button type="button" class="btn btn-primary">Save changes</button>
-				      </div>
+				      </div> -->
 				    </div>
 				  </div>
 				</div>
