--- a/src/main/resources/templates/user/cart/view.html
+++ b/src/main/resources/templates/user/cart/view.html
@@ -51,9 +51,9 @@
 	                                    </td>
 	                                    <td class="shoping__cart__quantity">
 										    <div class="quantity">
-										    	<button type="button" ng-click="item.qty = item.qty - 1">-</button>
+										    	<button type="button" ng-click="decreaseQuantity(item)">-</button>
 												  <input type="text" min="1" ng-change="cart.saveToLocalStorage() " ng-keydown="preventEmptyInput($event)" ng-model="item.qty" />
-												  <button type="button" ng-click="item.qty = item.qty + 1">+</button>
+												  <button type="button" ng-click="increaseQuantity(item)">+</button>
 										    </div>
 										</td>
 
@@ -107,7 +107,7 @@
 				  <div class="modal-dialog" style="max-width: 900px;">
 				    <div class="modal-content">
 				      <div class="modal-header">
-				        <h5 class="modal-title" id="exampleModalLabel">Billing Details</h5>
+				        <h5 class="modal-title" id="exampleModalLabel">Chi Tiết Hóa Đơn</h5>
 				        <span data-bs-dismiss="modal" aria-label="Close" style="cursor: pointer;"><i class="fas fa-times"></i></span>
 				      </div>
 				      <div class="modal-body">
