--- a/src/main/resources/static/assets/admin/layout/product.html
+++ b/src/main/resources/static/assets/admin/layout/product.html
@@ -15,18 +15,22 @@
 					<div class="form-group col-md-6">
 						<label for="title">Product id</label>
 						<input ng-model="form.id" class="form-control">
+						<div class="erridProduct" style='color: red;' ></div>
 					</div>
 					<div class="form-group col-md-6">
 						<label for="title">Product name</label>
 						<input ng-model="form.name" class="form-control">
+						<div class="errName" style='color: red;' ></div>
 					</div>
 					<div class="form-group col-md-6">
 						<label for="title">Product price</label>
 						<input ng-model="form.price" class="form-control">
+						<div class="errPrice" style='color: red;' ></div>
 					</div>
 					<div class="form-group col-md-6">
 						<label for="title">Product quantity</label>
 						<input ng-model="form.productQuantity" class="form-control">
+						<div class="errproductQuantity" style='color: red;' ></div>
 					</div>
 					
 					
@@ -34,11 +38,13 @@
 					<div class="form-group col-md-6">
 						<label for="title">Available</label>
 						<input ng-model="form.available" class="form-control">
+						<div class="erravailable" style='color: red;' ></div>
 					</div>
 					
 					<div class="form-group col-md-6">
 						<label for="title">Status</label>
 						<input ng-model="form.status" class="form-control">
+						<div class="errstatus" style='color: red;' ></div>
 					</div>
 
 						<div class="form-group col-md-6">
@@ -46,12 +52,14 @@
 						<div class="custom-file mb-4">
 	                    	<label for="image" class="custom-file-label">{{form.image}}</label>
 	                        <input onchange="angular.element(this).scope().imageChanged(this.files)" id="image" type="file" class="form-control ">
+	                        
 	                    </div>						
 					</div>
 
 					<div class="form-group col-md-6">
 						<label for="title">Description</label>
 						<textarea ng-model="form.description" class="form-control" rows="5" cols="4"></textarea>
+						<div class="errdescription" style='color: red;' ></div>
 					</div>
 					<div class="form-group col-md-6 text-center" style="align-items: center; display: flex;">
 						<label for="image" style="margin: 0;">
