--- a/src/main/resources/static/assets/admin/layout/product.html
+++ b/src/main/resources/static/assets/admin/layout/product.html
@@ -11,6 +11,7 @@
 						<select ng-model="form.category.id" class="form-control">
 			                <option ng-repeat="x in categories" ng-value="x.id">{{x.id}}</option>
 			            </select>
+			            <div class="errcategory" style='color: red;' ></div>
 					</div>
 					<div class="form-group col-md-6">
 						<label for="title">Product id</label>
