--- a/src/main/resources/templates/user/order/checkout.html
+++ b/src/main/resources/templates/user/order/checkout.html
@@ -1,7 +1,7 @@
 <section class="checkout spad" xmlns:th="http://www.thymeleaf.org">
 	<div class="container">
 		<div class="checkout__form">
-			<form action="#">
+			<form>
 				<div class="row">
 					<div class="col-lg-7 col-md-6">
 						<div class="row">
