--- a/src/main/resources/templates/user/security/login_register.html
+++ b/src/main/resources/templates/user/security/login_register.html
@@ -8,18 +8,19 @@
     <title>TastyBites</title>
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style_login.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 </head>
-<body>
-    <div th:class="'container ' + ${regisActive}" id="container">
-        <div class="form-container register-container">
-            <form action="@{/security/register}" method="post">
+<body ng-app="account">
+    <div  th:class="'container ' + ${regisActive}" id="container" >
+        <div  class="form-container register-container" ng-controller="ctrl-account">
+            <form>
                 <a style="margin-bottom: -10px" th:href="@{/home/index}"><img alt="" src="/assets/img/logo.png"></a>
                 <h1>Register</h1>
-                <input type="text" placeholder="Username" name="username" id="username" name="username">
-                <input type="text" placeholder="Email" id="register-email" name="email" id="userEmail" name="userEmail" >
-                <input type="password" placeholder="Password" name="password" id="password" name="password">
-                <input type="password" placeholder="Confirm Password" name="confirmPassword">
-                <button type="submit">Register</button>
+                <input type="text" placeholder="Username" ng-model="form.username" id="username" name="username">
+                <input type="text" placeholder="Fullname" ng-model="form.fullname" id="fullname" name="fullname">
+                <input type="text" placeholder="Email" ng-model="form.email" id="userEmail" name="userEmail" >
+                <input type="password" placeholder="Password" ng-model="form.password" id="password" name="password">
+                <button ng-click="create()">Register</button>
                 <span>or use your account</span>
                 <div class="social-container">
                     <a href="#" class="social"><i class="lni lni-facebook-fill"></i></a>
@@ -80,5 +81,6 @@
     </div>
     
     <script src="/assets/js/script.js"></script>
+    <script src="/assets/js/account.js"></script>
 </body>
 </html>
