add feature discount

--- a/src/main/resources/templates/user/cart/view.html
+++ b/src/main/resources/templates/user/cart/view.html
@@ -84,10 +84,11 @@
 	                    <div class="shoping__continue">
 	                        <div class="shoping__discount">
 	                            <h5>Discount Codes</h5>
-	                            <form action="#">
-	                                <input type="text" placeholder="Enter your coupon code">
-	                                <button type="submit" class="site-btn">APPLY COUPON</button>
-	                            </form>
+								<p th:text="${price}"></p>
+								<form th:action="@{/discount}" method="POST">
+									<input type="text" name="code" placeholder="Enter your coupon code">
+									<button type="submit" class="site-btn">APPLY COUPON</button>
+								</form>
 	                        </div>
 	                    </div>
 	                </div>
