--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -64,6 +64,7 @@
     <script src="/assets/js/loadmore.js"></script>
 	<script src="/assets/js/shopping-cart-app.js"></script>
 	<script src="/assets/js/miniCart.js"></script>
+	<script src="/assets/js/viewmore.js"></script>
 	
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
